--- a/bsconfig.json
+++ b/bsconfig.json
@@ -32,6 +32,6 @@
     "reason-apollo-hooks",
     "bs-css"
   ],
-  "ppx-flags": ["graphql_ppx/ppx"],
+"ppx-flags": ["@baransu/graphql_ppx_re/ppx6"],
   "refmt": 3
 }
