--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "node-sass": "^4.12.0",
     "react": "16.10.2",
     "react-dom": "16.10.2",
-    "reason-apollo": "^0.17.0",
+    "reason-apollo": "https://github.com/apollographql/reason-apollo.git",
     "reason-apollo-hooks": "^2.7.0",
     "reason-react": "0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
+    "@baransu/graphql_ppx_re": "0.3.2",
     "babel-plugin-bucklescript": "^0.5.3",
-    "bs-platform": "5.2.1",
-    "graphql_ppx": "^0.2.8",
+    "bs-platform": "6.2.1",
     "next-transpile-modules": "^2.3.1"
   }
 }
